test/message/vm_dont_display_runtime_error.out
beginning
middle
test.vm:1
throw new Error("boo!")
^

Error: boo!
    at test.vm:1:7
    at Script.runInThisContext (vm.js:*)
    at Object.runInThisContext (vm.js:*)
    at Object.<anonymous> (*test*message*vm_dont_display_runtime_error.js:*)
    at Module._compile (internal/modules/cjs/loader.js:*)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:*)
    at Module.load (internal/modules/cjs/loader.js:*)
    at tryModuleLoad (internal/modules/cjs/loader.js:*:*)
    at Function.Module._load (internal/modules/cjs/loader.js:*)
    at Function.Module.runMain (internal/modules/cjs/loader.js:*)
